fix git ignore and add overflow

--- a/src/scss/main/spotify.sass
+++ b/src/scss/main/spotify.sass
@@ -4,6 +4,7 @@
   display: flex
   align-items: center
   justify-content: space-between
+  overflow: hidden
   &__body
     &-header
       margin-bottom: get-vw(40px)
